# sdf2scad

./: .gitignore  .gitlab-ci.yml  README.md  mol2scad.py  setup.cfg  util.scad
