[metadata]
name = mol2scad
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/mol2scad.py
description = A tool to render mol and sdf files to OpenSCAD
long_description = file: README.md
keywords = mol, structure data file, OpenSCAD, molecule
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Everyone
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science
	Topic :: Education
[options]
python_requires = >=3.4
zip_safe = True
py_modules = mol2scad
setup_requires = setuptools_scm;
install_requires = 
	webcolors @ git+https://github.com/ubernostrum/webcolors.git
	mollusk @ git+https://github.com/georglind/mollusk.git
	solid @ git+https://github.com/SolidCode/SolidPython.git
	mendeleev
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git
